@@ -1013,10 +1013,9 @@ L<Test::Mojo>.
 
   done_testing();
 
-Just run your tests with the command L<Mojolicious::Command::test> or L<prove>.
+Just run your tests with L<prove>.
 
-  $ ./myapp.pl test
-  $ ./myapp.pl test -v t/basic.t
+  $ prove -l -v
   $ prove -l -v t/basic.t
 
 =head1 MORE
