@@ -1,5 +1,6 @@
 
 8.0  2018-09-08
+  - Removed test command.
   - Removed deprecated error and finish events from Mojo::IOLoop::Delay.
   - Improved Mojo::Promise to allow for reject and resolve methods to be used as
     class methods.
